# gfrft-unified

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Initialize.m  Makefile  README.md  initializegfrftunified.m  miss_hit.cfg  pyproject.toml
data/tv-graph-datasets/: README.md  covid19-usa.mat  pm25-concentration.mat
denoising-task/: Display_Result.m  Experiment.m  Init_Syn.m  Main.m  Mesh.m  Syn_Graph_Plot.m  Syn_Main.m  init.m  main.m
equivalence/: GFRFT_Mtx_Eigen.m  GFRFT_Mtx_Explog.m  GFRFT_Mtx_Hyper.m  Main.m  Plot_Time.m  Plot_Time_Large.m  Plot_Time_Size.m  Time.m  Time_Large.m  Time_Size.m
optimal-filtering-task/: Analyze_Results.m  Analyze_Results_Common.m  Experiment.m  Experiment_Common.m  Init_Real.m  Main.m  Main_Common.m  snr-result.md
sampling-task/: Get_Optimal_Sampling_Operator.m  Logistic_Regressor.m  Main.m  Sampling.m  Sigmoid.m  logistic_regressor.m  sampling.m  sigmoid.m
sampling-task/plot/: Plotting.m  (+1 more)
spectral-modes/: Animate.m  Heat.m  Main.m  Plot.m
src/: GFRFT_Mtx.m  GFT_Mtx.m  Get_GFT_With_Strategy.m  MSE_Percent.m  Matrix_Idx.m  Median_Filter.m  Must_Be_Logical.m  Normalize_Plus_Minus_One.m  Normalize_Zero_One.m  Snr.m  gfrftmtx.m  init.m  main.m  miss_hit.cfg
tests/: Test_Community_Graph.m  Test_Erdos_Graph.m  Test_GFRFT_Mtx.m  Test_Median_Filter.m  Test_Optimal_Filter.m  testcommunitygraph.m  testerdosgraph.m  testgfrftmtx.m
trainable/: concept.ipynb  conceptual.py  filtering.ipynb  filtering.py  src.ipynb  transform_learning.py  utils.py
tv-graph-datasets/: covid19-global.mat  sea-surface-temperature.mat  synthetic.mat
(+62 files in other folders)
