[tool.poetry]
name = "gfrft-unified"
version = "0.1.0"
description = ""
authors = ["Tuna Alikaşifoğlu <tunakasif@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.0.0"
pyzmq = "26.0.0"
torch-gfrft = {git = "https://github.com/tunakasif/torch-gfrft.git"}
scipy = "^1.13.0"
pygsp = "^0.5.1"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
mypy = "^1.6.1"
pytest = "^7.4.3"
ipykernel = "^6.26.0"
ipython = "^8.18.0"
ipywidgets = "^8.1.2"
hypothesis = "^6.100.1"

[tool.ruff]
line-length = 100

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.extend-per-file-ignores]
"/**/tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["trainable/tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
